src/css/ipod.css
.ipodjs {
  position: relative;
  width: 445px;
  height: 680px;
  /* TODO: Remove next rule when Firefox supports image-set() */
  background-size: contain;
  background-image: url('../img/ipodjs.png');
  background-image: -webkit-image-set(
    url('../img/ipodjs.png') 1x,
    url('../img/ipodjs@1.5x.png') 1.5x,
    url('../img/ipodjs@2x.png') 2x,
    url('../img/ipodjs@2.5x.png') 2.5x
  );
  background-image: image-set(
    url('../img/ipodjs.png') 1x,
    url('../img/ipodjs@1.5x.png') 1.5x,
    url('../img/ipodjs@2x.png') 2x,
    url('../img/ipodjs@2.5x.png') 2.5x
  );
}

.ipodjs.playing .top-bar:after {
  background-position: -50px -58px;
}

.ipodjs.paused .top-bar:after {
  background-position: -64px -58px;
}

.control-link {
  position: absolute;
}

.control-link img,
.top-bar:before,
.top-bar:after {
  background-image: url('../img/ipodjs-controls.png');
  background-image: -webkit-image-set(
    url('../img/ipodjs-controls.png') 1x,
    url('../img/ipodjs-controls@1.5x.png') 1.5x,
    url('../img/ipodjs-controls@2x.png') 2x,
    url('../img/ipodjs-controls@2.5x.png') 2.5x
  );
  background-image: image-set(
    url('../img/ipodjs-controls.png') 1x,
    url('../img/ipodjs-controls@1.5x.png') 1.5x,
    url('../img/ipodjs-controls@2x.png') 2x,
    url('../img/ipodjs-controls@2.5x.png') 2.5x
  );
}

.menu-link,
.forward-link,
.backward-link,
.play-link,
.select-link {
  composes: control-link;
}

.menu-link {
  left: 167px;
  top: 381px;
}

.menu-link img {
  background-position: 0 0;
  width: 84px;
  height: 24px;
}

.menu-link:hover img,
.menu-link:focus img {
  background-position: -194px 0;
}

.backward-link {
  left: 87px;
  top: 464px;
}

.backward-link img {
  background-position: 0px -25px;
  width: 53px;
  height: 31px;
}

.backward-link:hover img,
.backward-link:focus img {
  background-position: -194px -25px;
}

.forward-link {
  left: 299px;
  top: 480px;
}

.forward-link img {
  background-position: -59px -28px;
  width: 49px;
  height: 27px;
}

.forward-link:hover img,
.forward-link:focus img {
  background-position: -253px -28px;
}

.play-link {
  left: 177px;
  top: 577px;
}

.play-link img {
  background-position: -115px -26px;
  width: 63px;
  height: 31px;
}

.play-link:hover img,
.play-link:focus img {
  background-position: -309px -26px;
}

.select-link {
  top: 440px;
  left: 173px;
}

.select-link img {
  background-position: -101px -57px;
  height: 87px;
  width: 89px;
}

.select-link:hover img,
.select-link:focus img {
  background-position: -205px -69px; 
}

.screen {
  width: 340px;
  height: 240px;
  border: 6px solid black;
  font-family: Helvetica;
  position: relative;
  overflow: hidden;
  background-color: white;
  display: inline-block;
  left: 10%;
  top: 8%;
}

.top-bar {
  height: 20px;
  background-image: linear-gradient(to bottom, #FFFFFF 30%, #ACAFB1 82%, #85898C 100%);
  border-color: 1px solid #6F7072;
  border-width: 0 0 1px 0;
  line-height: 20px;
  padding: 0 10px;
  font-size: 12px;
  font-weight: bold;
  position: absolute;
  width: 100%;
  box-sizing: border-box;
}

.top-bar:before,
.top-bar:after {
  content: '';
  height: 100%;
  float: right;
}

.top-bar:before {
  width: 27px;
  background-position: -21px -58px;
  top: 7px;
  
}

.top-bar:after {
  width: 12px;
  margin-right: .5em;
  background-position: 0 -108px;
}

.container {
  width: 300%; 
  height: 100%; 
  position: relative;
  padding-top: 20px;
  box-sizing: border-box;
}

.panel {
  width: 33.333333%; 
  height: 100%; 
  display: inline-block; 
  float: left;
}

.list {
  list-style: none;
  padding: 0;
  margin: 0;
  height: 100%;
  overflow-x: hidden;
  overflow-y: auto;
}

